Use Map.of() instead of Collections.emptyMap()
With Java 17, GSON cannot serialize Collections.emptyMap private types
while it can convert empty maps created using Map.of().