@@ -188,17 +188,17 @@ public class FormulaController {
                         .orElseThrow(() -> new UnsupportedOperationException("Not a Salt minion: " + id));
                 map.put("system_data", FormulaFactory.
                         getFormulaValuesByNameAndMinion(formulaName, server)
-                        .orElseGet(Collections::emptyMap));
+                        .orElseGet(Map::of));
                 map.put("group_data", FormulaFactory
                         .getGroupFormulaValuesByNameAndServer(formulaName, server)
-                        .orElseGet(Collections::emptyMap));
+                        .orElseGet(Map::of));
                 break;
             case GROUP:
                 ServerGroup group = ServerGroupFactory.lookupByIdAndOrg(id, user.getOrg());
-                map.put("system_data", Collections.emptyMap());
+                map.put("system_data", Map.of());
                 map.put("group_data", FormulaFactory
                         .getGroupFormulaValuesByNameAndGroup(formulaName, group)
-                        .orElseGet(Collections::emptyMap));
+                        .orElseGet(Map::of));
                 break;
             default:
                 return errorResponse(response, Collections.singletonList("Invalid target type!"));
@@ -206,7 +206,7 @@ public class FormulaController {
         map.put("formula_name", formulaName);
         map.put("layout", FormulaFactory
                 .getFormulaLayoutByName(formulaName)
-                .orElseGet(Collections::emptyMap));
+                .orElseGet(Map::of));
         map.put("metadata", FormulaFactory.getMetadata(formulaName));
         return json(response, map);
     }
